syntax = "proto3";
package bradleyjkemp.github.io;

message Outer {
    Inner outer_value = 1;
    int64 outer_num = 2;
}

message Inner {
    string inner_value = 3;
    int64 inner_num = 4;
}

message OuterWithExtra {
    Inner outer_value = 1;
    int64 outer_num = 2;
    string extra_field = 3;
}

service TestService {
    rpc TestUnaryClientRequest(Outer) returns (Outer) {};
    rpc TestStreamingServerMessages(Outer) returns (stream Outer) {};
}
